# chess-theory

./: .gitignore  Cargo.toml  README.md
chess_discovery_data/: chess_discovery_1752681350_report.md  chess_discovery_1752681549_report.md  chess_discovery_1752700278_report.md  chess_discovery_1752703009_report.md  chess_discovery_1752707355_report.md  chess_discovery_1752759477_report.md  chess_discovery_1752769475_report.md  chess_discovery_1752789825_report.md  chess_discovery_1752796117_report.md  chess_discovery_1752851015_report.md  chess_discovery_1752875442_report.md  chess_discovery_1753115642_report.md  chess_discovery_1753128843_report.md
src/: chess_data_loader.rs  dimensional_reduction.rs  discovery_engine.rs  feature_mapper.rs  game_outcome_validator.rs  intelligent_explorer.rs  knowledge_metrics.rs  lib.rs  main.rs  parallel_processing.rs  persistence.rs  stockfish_oracle.rs  symbolic_regression.rs
