[package]
name = "chess-theory"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chess-theory"
path = "src/main.rs"

[[bin]]
name = "discover-only"
path = "src/bin/discover_only.rs"

[[bin]]
name = "test-findings"
path = "src/bin/test_findings.rs"

[dependencies]
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
nalgebra = "0.32"
approx = "0.5"
linfa = "0.7"
linfa-reduction = "0.7"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
rayon = "1.8"
indicatif = "0.17"
futures = "0.3"
crossbeam = "0.8"
num_cpus = "1.16"
